--- a/src/components/ReviewComponents/ReviewsList.module.css
+++ b/src/components/ReviewComponents/ReviewsList.module.css
@@ -6,3 +6,9 @@
   border-radius: 0.3rem;
   border: 1px solid transparent; /* Removes margin collapse */
 }
+
+@media screen and (max-width: 600px) {
+  .review-thread {
+    width: 100%;
+  }
+}
